--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+api.security.secret=${JWT_SECRET:123456}
+
+
+#Reduce la informacion mostrada cuando ocurre un error
+server.error.include-stacktrace=never
